Day3/terraform/src/kubernetes/1-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deploy
  namespace: apdev
  labels:
    app: user
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:

      containers:
        - name: user
          image: ACCOUNT_ID.dkr.ecr.ap-northeast-2.amazonaws.com/apdev-user:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "200m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 20"]
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: user-svc
  namespace: apdev
spec:
  type: ClusterIP
  selector:
    app: user
  ports:
    - port: 80
      targetPort: 8080
