Day3/terraform/src/kubernetes/2-product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deploy
  namespace: apdev
  labels:
    app: product
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      serviceAccountName: product
      containers:
        - name: product
          image: ACCOUNT_ID.dkr.ecr.ap-northeast-2.amazonaws.com/apdev-product:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "200m"
              memory: "150Mi"
            limits:
              cpu: "300m"
              memory: "300Mi"
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 20"]
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: product-svc
  namespace: apdev
spec:
  type: ClusterIP
  selector:
    app: product
  ports:
    - port: 80
      targetPort: 8080
