Day3/terraform/src/kubernetes/3-stress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stress-deploy
  namespace: apdev
  labels:
    app: stress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stress
  template:
    metadata:
      labels:
        app: stress
    spec:

      containers:
        - name: stress
          image: ACCOUNT_ID.dkr.ecr.ap-northeast-2.amazonaws.com/apdev-stress:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "500m"
              memory: "150Mi"
            limits:
              cpu: "1000m"
              memory: "300Mi"
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 10
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sleep", "15"]
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: stress-svc
  namespace: apdev
  annotations:
    alb.ingress.kubernetes.io/target-group-attributes: load_balancing.algorithm.type=least_outstanding_requests
spec:
  type: ClusterIP
  selector:
    app: stress
  ports:
    - port: 80
      targetPort: 8080
